test/cli/test-mutating-policy/image-metadata/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: context
spec:
  images:
  - image: nginx:1.21
    config:
      architecture: amd64
