test/cli/test-mutating-policy/image-metadata/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
context: context.yaml
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- pod.yaml
results:
- isMutatingPolicy: true
  kind: Pod
  patchedResources: patched-pod.yaml
  policy: mpol-image-data
  resources:
  - default/test-pod
  result: pass
